# connect4

./: .gitignore  .isort.cfg  Dockerfile  README.md  mypy.ini  pyproject.toml
connect4/: board.py  game.py  play.py  utils.py
