[tool.black]
line-length = 79
target-version = ['py36', 'py37', 'py38']
include = '\.pyi?$'
exclude = '''
/(
    \.eggs
  | \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | _build
  | buck-out
  | build
  | dist
)/
'''

[tool.isort]
line_length = 79
include_trailing_comma = true

[tool.poetry]
name = "connect4"
version = "0.1.0"
description = ""
authors = ["aleksandrinvictor <aleksandrinvictor@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.7"
numpy = "^1.20.3"

[tool.poetry.dev-dependencies]
pre-commit = "^2.13.0"
mypy = "^0.812"
black = "^21.5b1"
flake8 = "^3.9.2"
isort = "^5.8.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
